yamls/ns-smcp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhte-service-mesh-control-plane
spec: {}
