yamls/virtual-service-with-error.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  name: carinfo
spec:
  hosts:
  - carinfo.SUFFIX
  - frontend-1-1.carinfo.svc.cluster.local
  gateways:
  - carinfo-frontend-gateway
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 80
      route:
      - destination:
          host: frontend-1-1.carinfo.svc.cluster.local
          port:
            number: 8080
